[package]
name = "old-faithful-download"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
data-encoding = "2"
hex = "0.4"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "stream"] }
ripget = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha1 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
